--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^2.4.2",
-    "ember-cli": "~4.7.0",
+    "ember-cli": "3.28.0",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "^7.26.11",
     "ember-cli-dependency-checker": "^3.3.1",
@@ -44,7 +44,7 @@
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
-    "ember-source": "~4.7.0",
+    "ember-source": "3.28.0",
     "ember-template-lint": "^4.14.0",
     "ember-welcome-page": "^6.2.0",
     "eslint": "^7.32.0",
